--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -9180,7 +9180,6 @@ zip.file("_micCal.txt", micCal);
       Object.freeze(subHighFreq);
       await postDelete(rpIdx);
       await postDelete(tcIdx);
-      await postNext('Smooth', mCount, { smoothing: "1/48" }); // revert sub smoothing for next calculation
       console.info(`${commandId[nSpeakers]} bandwidth: ${subLowFreq.toFixed(2)}hz - ${subHighFreq.toFixed(2)}hz (-3dB points)`);
       minCrossover = Math.max(findNearestXO(2 * subLowFreq), minCrossover);
       Object.freeze(minCrossover);
@@ -9228,8 +9227,6 @@ zip.file("_micCal.txt", micCal);
       console.log(`Calculating optimal subwoofer delay for ALL speakers using ${avgRolloff.toFixed(2)}hz as average XO...`); 
       await genSpeaker(mCount + 1, avgRolloff);
       await genSub(mCount, avgRolloff);
-      await postNext('Smooth', mCount + 2, { smoothing: "1/48" }); // speakers
-      await postNext('Smooth', mCount + 3, { smoothing: "1/48" }); // sub
       [isPossibleI, requiredDelayI, isInverted] = await align4system(mCount + 2, mCount + 3);
       if (isPossibleI) {
         subMoves = requiredDelayI;
@@ -9298,7 +9295,7 @@ zip.file("_micCal.txt", micCal);
     }
     async function rmsOfXO(noM, start=20, end=250) {
       const targetArray = response2array(targetResponse, start, end);
-      const freqResponse = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', noM);
+      const freqResponse = await fetchSafe('frequency-response?smoothing=Psy&ppo=96', noM);
       const aSumArray = response2array(freqResponse, start, end);
       return calculateRMSError(aSumArray, targetArray);
     }
@@ -9312,7 +9309,7 @@ zip.file("_micCal.txt", micCal);
         const cmdIds = singleChannel ? commandId[(i - nSpeakers) / 2] : `${commandId[(i - nSpeakers) / 2]} & ${commandId[1 + (i - nSpeakers) / 2]}`;
         // finalize xo that is closest match to target curve
         const rolloff = parseFloat(customCrossover[(i - nSpeakers) / 2]);
-        let bestXO = rolloff, minRmsError= Infinity;
+        let bestXO = rolloff, minRmsError = Infinity;
         for (let j = 0; j < freqIndex.length; j++) {
           let checkXO = freqIndex[j];
           // don't look at XO below speaker or sub low end ext
@@ -9328,8 +9325,8 @@ zip.file("_micCal.txt", micCal);
             await postDelete(mCount + 1);
           }
           await genSub(mCount, checkXO);
-          await postNext('Smooth', mCount + 1, { smoothing: "1/48" }); // speaker
-          await postNext('Smooth', mCount + 2, { smoothing: "1/48" }); // sub
+          await postNext('Smooth', mCount + 1, { smoothing: "Psy" });
+          await postNext('Smooth', mCount + 2, { smoothing: "Psy" });
           await postNext('Arithmetic', [mCount + 1, mCount + 2], { function: "A + B" });
           const rmsError = await rmsOfXO(mCount + 3);
           if (rmsError < minRmsError) {
@@ -9414,8 +9411,6 @@ zip.file("_micCal.txt", micCal);
       if (hiDelay < -maxDelay) {hiDelay = -maxDelay;}
       if (loDelay < 0) {tempLo = loDelay; loDelay = 0;}
       if (hiDelay > 0) {tempHi = hiDelay; hiDelay = 0;}
-      await postNext('Smooth', i1, { smoothing: "1/48" });
-      await postNext('Smooth', i2, { smoothing: "1/48" });
       [isPossibleI, requiredDelayI, isInverted, sumIndex] = await alignMsub(i1, i2, hiDelay, loDelay);
       if ((tempLo < 0 && requiredDelayI < tempLo) || (tempHi > 0 && requiredDelayI > tempHi)) { isPossibleI = false; }
       alignmentResults.push({ isPossibleI, requiredDelayI, isInverted });
@@ -9434,8 +9429,6 @@ zip.file("_micCal.txt", micCal);
         tempLo = 0; tempHi = 0;
         if (loDelay < 0) {tempLo = loDelay; loDelay = 0;}
         if (hiDelay > 0) {tempHi = hiDelay; hiDelay = 0;}
-        await postNext('Smooth', sumIndex, { smoothing: "1/48" });
-        await postNext('Smooth', i2, { smoothing: "1/48" });
         [isPossibleI, requiredDelayI, isInverted, sumIndex] = await alignMsub(sumIndex, i2, hiDelay, loDelay);
         if ((tempLo < 0 && requiredDelayI < tempLo) || (tempHi > 0 && requiredDelayI > tempHi)) { isPossibleI = false; }
         alignmentResults.push({ isPossibleI, requiredDelayI, isInverted });
@@ -9478,11 +9471,13 @@ zip.file("_micCal.txt", micCal);
         throw new error;
       }
       let bestScore = -Infinity, bestI, iCount = 1, bestCount = null;
+      const tcArray = response2array(targetResponse, start, end);
+      const tcLevel = tcArray.reduce((acc, val) => acc + val, 0) / tcArray.length
       for (const index of finalIndices) {
         if (index !== null) {
-          const tempSum = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', index);
+          const tempSum = await fetchSafe('frequency-response?smoothing=Psy&ppo=96', index);
           const tempSumArray = response2array(tempSum, start, end);
-          const currScore = calculateLinearityScore(tempSumArray);
+          const currScore = calculateLinearityScore(tempSumArray, tcLevel);
           if (bestScore < currScore) { bestScore = currScore; bestI = index; bestCount = iCount; }
           console.info(`Configuration #${iCount} linearity score: ${currScore.toFixed(2)}`);
           iCount++;
@@ -9556,7 +9551,7 @@ zip.file("_micCal.txt", micCal);
       const meanOfSquares = sumOfSquares / arrayLength;
       return Math.sqrt(meanOfSquares);
     }
-    function calculateLinearityScore(rpArray) {
+    function calculateLinearityScore(rpArray, tcLevel) {
       if (rpArray.length === 0) { return -Infinity; }
       function calculateSTD(arr) {
         const mean = arr.reduce((acc, val) => acc + val, 0) / arr.length;
@@ -9565,13 +9560,13 @@ zip.file("_micCal.txt", micCal);
             (arr.length)
         );
       }
-      let magSum = rpArray.reduce((acc, val) => acc + val - 75.0, 0);
+      let magSum = rpArray.reduce((acc, val) => acc + val - tcLevel, 0);
       return magSum / calculateSTD(rpArray);
     }
     async function getSubwooferTrim(noM, start=30, end=80) {
       const targetArray = response2array(targetResponse, start, end);
       const targetSPL = targetArray.reduce((acc, val) => acc + val, 0) / targetArray.length;
-      const freqResponse = await fetchSafe('frequency-response?smoothing=Var&ppo=96', noM);
+      const freqResponse = await fetchSafe('frequency-response?smoothing=Psy&ppo=96', noM);
       const subArray = response2array(freqResponse, start, end);
       const subArraySPL = subArray.reduce((acc, val) => acc + val, 0) / subArray.length;
       const offset = targetSPL - subArraySPL;
@@ -9580,7 +9575,7 @@ zip.file("_micCal.txt", micCal);
     async function getSpeakerTrim(noM, start=500, end=2000) {
       const targetArray = response2array(targetResponse, start, end);
       const targetSPL = targetArray.reduce((acc, val) => acc + val, 0) / targetArray.length;
-      const freqResponse = await fetchSafe('frequency-response?smoothing=Var&ppo=96', noM);
+      const freqResponse = await fetchSafe('frequency-response?smoothing=Psy&ppo=96', noM);
       const spArray = response2array(freqResponse, start, end);
       const spArraySPL = spArray.reduce((acc, val) => acc + val, 0) / spArray.length;
       const offset = targetSPL - spArraySPL;
@@ -9588,9 +9583,9 @@ zip.file("_micCal.txt", micCal);
     }
     async function getMaxSumArray(ind1, ind2, start=20, end=120) {
       let maxSumArray = [];
-      const ind1FreqResponse = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', ind1);
+      const ind1FreqResponse = await fetchSafe('frequency-response?smoothing=Psy&ppo=96', ind1);
       const ind1Array = response2array(ind1FreqResponse, start, end);
-      const ind2FreqResponse = await fetchSafe('frequency-response?smoothing=1%2F48&ppo=96', ind2);
+      const ind2FreqResponse = await fetchSafe('frequency-response?smoothing=Psy&ppo=96', ind2);
       const ind2Array = response2array(ind2FreqResponse, start, end);
       if (ind1Array.length != ind2Array.length) { throw new Error("Unexpected error!"); }
       for (let i = 0; i < ind1Array.length; i++) {
@@ -9610,6 +9605,8 @@ zip.file("_micCal.txt", micCal);
       }
     }
     async function align4system(ind1, ind2, start=20, end=250) {
+      await postNext('Smooth', ind1, { smoothing: "Psy" });
+      await postNext('Smooth', ind2, { smoothing: "Psy" });
       const maxSumArray = await getMaxSumArray(ind1, ind2, start, end);
       let isInverted = false, isPossible = false, requiredDelay = Infinity, bestFreq = NaN, minRmsError = Infinity;
       let loDelay = maxNegative;
@@ -9636,7 +9633,7 @@ zip.file("_micCal.txt", micCal);
         if (noInversion && invertB) { continue; };
         if ((tempLo > 0 && delayB < tempLo) || (tempHi < 0 && delayB > tempHi)) { continue; };
 
-        const tempSum = await fetchAlign('aligned-frequency-response?smoothing=1%2F48&ppo=96');
+        const tempSum = await fetchAlign('aligned-frequency-response?smoothing=Psy&ppo=96');
         const tempSumArray = response2array(tempSum, start, end);
         const rmsError = calculateRMSError(tempSumArray, maxSumArray);
         if (rmsError < minRmsError) {
@@ -9663,6 +9660,8 @@ zip.file("_micCal.txt", micCal);
       return [isPossible, requiredDelay, isInverted];
     }
     async function alignMsub(ind1, ind2, loDelay, hiDelay, start=20, end=120) {
+      await postNext('Smooth', ind1, { smoothing: "Psy" });
+      await postNext('Smooth', ind2, { smoothing: "Psy" });
       const maxSumArray = await getMaxSumArray(ind1, ind2, start, end);
       let isInverted = false, isPossible = false, requiredDelay = NaN, sumIndex = null, bestFreq = NaN, minRmsError = Infinity;
       await postSafe("http://localhost:4735/alignment-tool/index-a", ind1, "selected as measurement A");
@@ -9682,7 +9681,7 @@ zip.file("_micCal.txt", micCal);
         const delayB = -parseFloat(await fetchAlign('delay-b'));
         if (noInversion && invertB) { continue; };
 
-        const tempSum = await fetchAlign('aligned-frequency-response?smoothing=1%2F48&ppo=96');
+        const tempSum = await fetchAlign('aligned-frequency-response?smoothing=Psy&ppo=96');
         const tempSumArray = response2array(tempSum, start, end);
         const rmsError = calculateRMSError(tempSumArray, maxSumArray);
         if (rmsError < minRmsError) {
